--- a/oehealth_idn/report/cppt_report.xml
+++ b/oehealth_idn/report/cppt_report.xml
@@ -3,72 +3,84 @@
     <template id="report_cppt">
         <t t-call="report.html_container">
             <t t-call="report.external_layout">
-                <t t-foreach="docs" t-as="o">
-                    <div class="page">
-                        <style>
+                
+                <div class="page">
+                    <style>
+                        th, td {
+                            padding: 8px;
+                        }
+                    </style>
+                    <div class="oe_structure">
+                        <br/>
+                        <h3 style="text-align:center;">
+                            CATATAN PERKEMBANGAN DAFTAR INSTRUKSI DAN IMPLEMENTASI PASIEN <br/>
+                            TERINTEGRASI (CPPT)
+                        </h3>
+                        <br/>
+                        <table style="width:100%; border : 1px solid black;">
+                            <tr>
+                                <td>
+                                    <table style="width:100%">
+                                        <tr>
+                                            <td>No.RM : <span t-esc="no_rm" /></td>
+                                            <td>Ruang Perawat : <span t-esc="bed" /> Kamar : <span t-esc="kelas" /></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Nama Pasien : <span t-esc="patient_name" /></td>
+                                            <td>Jenis Kelamin : <span t-esc="gender" /></td>
+                                        </tr>
+                                         <tr>
+                                            <td>Tanggal Lahir : <span t-esc="dob" /></td>
+                                            <td></td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+                        </table>
 
-th, td {
-  padding: 5px;
-}
-</style>
-                        <div class="oe_structure">
-                            <table style="width:100%; border : 1px solid black;">
+                        <table style="width:100%">
+                            <tr>
+                                <th style="border : 1px solid black;">Tgl/Jam</th>
+                                <th style="border : 1px solid black;">Proposional Pemberi Asuhan (PPA)</th>
+                                <th style="border : 1px solid black;">Hasil Assesment dan Pemberi Pelayanan (S.O.A.P)
+                                    DPJP harus membaca seluruh rencana perawat
+                                    </th>
+                                <th style="border : 1px solid black;">Verifikasi DPJP (bubuhkan stempel,nama,paraf,tgl,jam)</th>
+                            </tr>
+                            <t t-foreach="evaluation_list" t-as="ev">
                                 <tr>
-                                    <td>
-                                        <table style="width:100%">
-                                            <tr>
-                                                <td>No.RM : <span t-field="o.patient.medical_record" /></td>
-                                                <td>Ruang Perawat : II/I/VIV Kamar : ____________</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Nama Pasien : <span t-field="o.patient.name" /></td>
-                                                <td>Jenis Kelamin : <span t-field="o.patient.sex" /></td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                </tr>
-                            </table>
-
-                            <table style="width:100%">
-                                <tr>
-                                    <th style="border : 1px solid black;">Tgl/Jam</th>
-                                    <th style="border : 1px solid black;">Proposional Pemberi Asuhan (PPA)</th>
-                                    <th style="border : 1px solid black;">Hasil Assesment dan Pemberi Pelayanan (S.O.A.P)
-    DPJP harus membaca seluruh rencana perawat
-    </th>
-                                    <th style="border : 1px solid black;">Verifikasi DPJP (bubuhkan stempel,nama,paraf,tgl,jam)</th>
-                                </tr>
-                                <tr>
-                                    <td style="border : 1px solid black;"></td>
-                                    <td style="border : 1px solid black;"></td>
+                                    <td style="border : 1px solid black;"><span t-esc="tanggal" /></td>
+                                    <td style="border : 1px solid black;"><span t-esc="ppa" /></td>
                                     <td style="border : 1px solid black;">
-                                        S :
+                                        S : <span t-esc="ev['S']" />
                                         <br />
                                         <br />
+                                        O : 
                                         <br />
-                                        O :
+                                            BB <span t-esc="ev['S']['bb']" />
+                                        <br />
+                                            TB <span t-esc="ev['S']['tb']" />
+                                        <br />
+                                            IMT <span t-esc="ev['S']['imt']" />
+                                        <br/><br />
+                                        A : <span t-esc="ev['A']" />
                                         <br />
                                         <br />
-                                        <br />
-                                        A :
-                                        <br />
-                                        <br />
-                                        <br />
-                                        P :
-                                        <br />
-                                        <br />
+                                        P : <span t-esc="ev['P']" />
                                         <br />
                                         <br />
                                         Edukasi :
                                         <br />
                                         <br />
+                                        <br />
                                     </td>
-                                    <td style="border : 1px solid black;"></td>
+                                    <td style="border : 1px solid black;"><span t-esc="dpjp" /></td>
                                 </tr>
-                            </table>
-                        </div>
+                            </t>
+                        </table>
                     </div>
-                </t>
+                </div>
+                
             </t>
         </t>
     </template>
