--- a/oehealth_idn/report/report_menu.xml
+++ b/oehealth_idn/report/report_menu.xml
@@ -40,9 +40,9 @@
 
     <report id="pengkajian_rawat_inap_report_menu" string="Form Pengkajian Rawat Inap" model="oeh.medical.evaluation" report_type="qweb-pdf" name="oehealth_idn.report_pengkajian_rawat_inap" menu="True" />
 
-    <report id="rekam_medis_rawat_jalan_report_menu" string="Form Rekam Medis Rawat Jalan" model="oeh.medical.evaluation" report_type="qweb-pdf" name="oehealth_idn.report_rekam_medis_rawat_jalan" menu="True" />
+    <report id="rekam_medis_rawat_jalan_report_menu" string="Form Rekam Medis Rawat Jalan" model="oeh.medical.evaluation" report_type="qweb-pdf" name="oehealth_idn.report_rekam_medis_rawat_jalan" menu="False" />
 
-    <report id="cppt_report_menu" string="Form CPPT" model="oeh.medical.evaluation" report_type="qweb-pdf" name="oehealth_idn.report_cppt" menu="True" />
+    <report id="cppt_report_menu" string="Form CPPT" model="oeh.medical.evaluation" report_type="qweb-pdf" name="oehealth_idn.report_cppt" menu="False" />
 
     <report id="implementasi_keperawatan_report_menu" string="Form Implementasi Keperawatan" model="unit.registration" report_type="qweb-pdf" name="oehealth_idn.report_implementasi_keperawatan" menu="False" file="oehealth_idn.report_implementasi_keperawatan" />
 
