--- a/oehealth_idn/report/rujukan_radiologi_report.xml
+++ b/oehealth_idn/report/rujukan_radiologi_report.xml
@@ -30,6 +30,10 @@
                                         <strong>Kepada Yth,</strong>
                                         <strong>
                                             <p>Bagian Radiologi</p>
+                                            <span t-field="o.unit_administration" />
+                                            <br/>
+                                            <span t-field="o.reference_hospital" />
+                                            <br/>
                                         </strong>
                                     </div>
                                     <div>
