--- a/oehealth_idn/report/salinan_resep_report.xml
+++ b/oehealth_idn/report/salinan_resep_report.xml
@@ -9,44 +9,22 @@
                              <div class="row">
                                 <p style="font-size:24px;text-align:center;font-weight:bold;">Salinan Resep</p>
                             </div>
-                            <div class="row">
-                                <div class="col-xs-8">
-                                    <div>
-                                        <strong>No. RM / No. Arrival:</strong>
-                                        <p><span t-field="o.patient.medical_record"/> / <span t-field="o.name"/></p>
-                                    </div>
-                                    <div>
-                                        <strong>No. Registrasi:</strong>
-                                        <span t-field="o.reg_id.name"/>
-                                    </div>
-                                    <div>
-                                        <strong>Nama Pasien:</strong>
-                                        <span t-field="o.patient.name"/>
-                                    </div>
-                                    <div>
-                                        <strong>Tanggal Lahir:</strong>
-                                        <span t-field="o.patient.dob" t-field-options='{"format": "d MMMM y"}'/>
-                                    </div>
-                                </div>
-                                <div class="col-xs-4">
-                                    <div>
-                                        <strong>Dokter:</strong>
-                                        <p><span t-field="o.doctor"/></p>
-                                    </div>
-                                    <div>
-                                        <strong>Tanggal Masuk:</strong>
-                                        <span t-field="o.date" t-field-options='{"format": "d MMMM y"}'/>
-                                    </div>
-                                    <div>
-                                        <strong>Unit:</strong>
-                                        <span t-field="o.reg_id.unit.name"/>
-                                    </div>
-                                    <div>
-                                        <strong>No Resep:</strong>
-                                        
-                                    </div>
-                                </div>
-                            </div>
+                            <table style="width:100%; padding:5px;">
+                                   <tr>
+                                        <td>No. : <span t-field="o.name" />      Tanggal  : <span t-field="o.date" />  </td>
+                                   </tr>
+                                    <tr>
+                                        <td>Dari Dokter :  <span t-field="o.doctor.name" /></td>
+                                   </tr>
+                                   <tr>
+                                        <td>Dibuat Tanggal  : <span t-esc="context_timestamp(datetime.datetime.now()).strftime('%Y-%m-%d %H:%M')"/></td>
+                                   </tr>  
+                                   <tr>
+                                        <td>Untuk  :  </td>
+                                   </tr>
+                            </table>
+                            <h2><i>R/</i></h2> 
+                            <br/>
                             
                             <table class="table table-condensed mt32">
                                 <thead>
@@ -74,6 +52,8 @@
                                     </tr>
                                 </tbody>
                             </table>
+                            <br/><br/>
+                            <span t-esc="context_timestamp(datetime.datetime.now()).strftime('%Y-%m-%d %H:%M')"/>
                         </div>
                     </div>
                 </t>
