--- a/oehealth_idn/report/rujukan_pasien_report.xml
+++ b/oehealth_idn/report/rujukan_pasien_report.xml
@@ -142,18 +142,20 @@ th, td {
                                                         <th style="border: 1px solid black;">Rute</th>
                                                     </tr>
                                                     <t t-set="nomor" t-value="1" />
-                                                    <tr t-foreach='o.prescription_id.prescription_line' t-as='line'>
-                                                        <td style="border: 1px solid black;">
-                                                            <t t-esc="nomor" />
-                                                        </td>
-                                                        <td style="border: 1px solid black;">
-                                                            <t t-esc="line['duration']" />
-                                                        </td>
-                                                        <td style="border: 1px solid black;">
-                                                            <t t-esc="line['name']" />
-                                                        </td>
-                                                        <td style="border: 1px solid black;"></td>
-                                                    </tr>
+                                                    <t t-foreach='o.prescription_id' t-as='i'>
+                                                        <tr t-foreach='i.prescription_line' t-as='line'>
+                                                            <td style="border: 1px solid black;">
+                                                                <t t-esc="nomor" />
+                                                            </td>
+                                                            <td style="border: 1px solid black;">
+                                                                <span t-field="line.duration" />
+                                                            </td>
+                                                            <td style="border: 1px solid black;">
+                                                                <span t-field="line.name"/>
+                                                            </td>
+                                                            <td style="border: 1px solid black;"></td>
+                                                        </tr>
+                                                    </t>
                                                 </table>
                                             </td>
                                         </tr>
