--- a/oehealth_idn/report/rujukan_radiologi_report.xml
+++ b/oehealth_idn/report/rujukan_radiologi_report.xml
@@ -44,7 +44,7 @@
                                     <div>
                                         <strong>Mohon dilakukan pemeriksaan : 
                                         <t t-foreach="o.evaluation_id" t-as="l">
-                                             <t t-if="true == l.is_doctor">
+                                             <t t-if="true == l.doctor.is_doctor">
                                                 <span t-field="l.notes_complaint" />
                                             </t>
                                         </t>
