--- a/oehealth_idn/report/resep_report.xml
+++ b/oehealth_idn/report/resep_report.xml
@@ -2,8 +2,31 @@
 <odoo>
     <template id="report_resep">
         <t t-call="report.html_container">
-            <t t-call="report.external_layout">
                 <t t-foreach="docs" t-as="o">
+                    <!-- Header -->
+                    <t t-if="not o and doc">
+                        <t t-set="o" t-value="doc"/>
+                    </t>
+                    <t t-if="o and 'company_id' in o">
+                        <t t-set="company" t-value="o.company_id"/>
+                    </t>
+                    <t t-if="not o or not 'company_id' in o">
+                        <t t-set="company" t-value="res_company"/>
+                    </t>
+                    <div class="header">
+                        <div class="row" style="border-bottom: 1px solid black;">
+                            <div class="col-xs-3">
+                                <img t-if="company.logo" t-att-src="'data:image/png;base64,%s' % company.logo" style="max-height: 45px;"/>
+                            </div>
+                            
+                        <div class="col-xs-9" style="text-align:center;">
+                            <h2><span t-field="o.pharmacy.operating_unit_id.name" /></h2> <br/>
+                            <span t-field="o.pharmacy.operating_unit_id.unit_address" />
+                        </div>
+                        
+                        </div>
+                    </div>
+                    <!-- end header -->
                     <div class="page">
                         <div class="oe_structure">
                              <div class="row">
@@ -22,60 +45,62 @@
 			<h2><i>R/</i>  : <span t-field="o.name" /></h2> 
             <br/><br/>
 			<table class="table table-condensed mt32">
-                                <thead>
-                                    <tr>
-                                           <th class="text-left">Obat</th>
-                                            <th class="text-left">Dosis</th>
-                                            <th class="text-left">QTY</th>
-                                            <th class="text-left">Duration</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr t-foreach="o.prescription_line" t-as="s">
-                                           <td class="text-left">
-                                                <span t-field="s.name"/>
-                                            </td>
-                                            <td class="text-left">
-                                                <span t-field="s.dose"/>
-                                            </td>
-                                            <td class="text-left">
-                                                <span t-field="s.qty"/>
-                                            </td>
-                                            <td class="text-left">
-                                                <span t-field="s.duration"/>
-                                            </td>
-                                    </tr>
-									<t t-foreach="o.concoction_ids" t-as="cc">
-       <tr>  
-<td> 
-Obat : <span t-field="cc.product_id.name" />
-</td>
-<td>
-       Jumlah : <span t-field="cc.qty" />
-</td>
-<td colspan="2">
-        Keterangan : <span t-field="cc.remark" />
-</td>
-</tr>
-        <t t-foreach="cc.concoction_detail_ids" t-as="ccd">
-<tr>
-<td>
-Obat Detail : <span t-field="ccd.product_id.name" />
-</td>
-<td>
- Zat Aktif : <span t-field="ccd.zat_qty" />
-</td>
-<td colspan="2">
- Keterangan : <span t-field="ccd.total" />
-</td>
-</tr>
-</t>
-</t>
+                <thead>
+                    <tr>
+                            <th class="text-left">Obat</th>
+                            <th class="text-left">Dosis</th>
+                            <th class="text-left">QTY</th>
+                            <th class="text-left">Frequency</th>
+                            <th class="text-left">Admin hours</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr t-foreach="o.prescription_line" t-as="s">
+                            <td class="text-left">
+                                <span t-field="s.name"/>
+                            </td>
+                            <td class="text-left">
+                                <span t-field="s.dose"/> Mg
+                            </td>
+                            <td class="text-left">
+                                <span t-field="s.qty"/>
+                            </td>
+                            <td class="text-left">
+                                <span t-field="s.common_dosage"/>
+                            </td>
+                            <td class="text-left">
+                                <span t-field="s.admin_times"/>
+                            </td>
+                    </tr>
+                    <t t-foreach="o.concoction_ids" t-as="cc">
+                        <tr>  
+                            <td> 
+                                Obat : <span t-field="cc.product_id.name" />
+                            </td>
+                            <td>
+                                Jumlah : <span t-field="cc.qty" />
+                            </td>
+                            <td colspan="3">
+                                Keterangan : <span t-field="cc.remark" />
+                            </td>
+                        </tr>
+                        <t t-foreach="cc.concoction_detail_ids" t-as="ccd">
+                            <tr>
+                                <td>
+                                    Obat Detail : <span t-field="ccd.product_id.name" />
+                                </td>
+                                <td>
+                                    Zat Aktif : <span t-field="ccd.zat_qty" />
+                                </td>
+                                <td colspan="3">
+                                    Keterangan : <span t-field="ccd.total" />
+                                </td>
+                            </tr>
+                        </t>
+                    </t>
 
-                                </tbody>
-                            </table>
-		
-
+                </tbody>
+            </table>
 		</td>
 	</tr>
 </table>
@@ -122,7 +147,6 @@ Obat Detail : <span t-field="ccd.product_id.name" />
                         </div>
                     </div>
                 </t>
-            </t>
         </t>
     </template>
 </odoo>
