--- a/oehealth_idn/report/resep_report.xml
+++ b/oehealth_idn/report/resep_report.xml
@@ -21,7 +21,9 @@
                             
                         <div class="col-xs-9" style="text-align:center;">
                             <h2><span t-field="o.pharmacy.operating_unit_id.name" /></h2> <br/>
-                            <span t-field="o.pharmacy.operating_unit_id.unit_address" />
+                            <span t-field="o.pharmacy.operating_unit_id.unit_address" /><br/>
+                            No. Izin Klinik : <span t-field="o.pharmacy.operating_unit_id.izin_klinik" /><br/>
+                            No. Izin Apotik : <span t-field="o.pharmacy.operating_unit_id.izin_apotik" />
                         </div>
                         
                         </div>
