--- a/oehealth_idn/views/jakc_queue_view.xml
+++ b/oehealth_idn/views/jakc_queue_view.xml
@@ -69,6 +69,8 @@
             <field name="bg_color" position="after">
                 <field name="operating_unit_id"/>
                 <field name="unit_administration_id" domain="[('operating_id','=', operating_unit_id)]"/>
+                <field name="is_unit"/>
+                <field name="is_lab"/>
             </field>
             <field name="next_type_id" position="replace">
                 <field name="next_type_id" domain="[('operating_unit_id','=', operating_unit_id)]"/>
